🐛 FIX: adding overflow x for math blocks (#213)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -81,6 +81,10 @@ main.bd-content {
             font-size: 1.2em;
         }
 
+        div.math {
+            overflow-x: auto;
+        }
+
         // Images
         img {
             display: block;
